# hkdaemon

./: CMakeLists.txt
hkdaemon/: CMakeLists.txt  Hotkey.hpp  VK_Extras.h  WindowsLite.h  action.hpp  config.hpp  hkdaemon.cpp  hotkey.hpp
hkdaemon/src/: hkdaemon.cpp
